update swagger (complete)
