# commands/runserver.go
@@ -8,12 +8,19 @@ import (
 // @version 1.0
 // @description This is a sample API docs with Swagger
 // @termsOfService http://swagger.io/terms/
+
 // @contact.name Dinda
 // @contact.email dindasigma@gmail.com
+
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
 // @host localhost:8080
 // @BasePath /
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func main() {
 	api.Run()
 }
