# packages/api/models/user.go
@@ -19,8 +19,8 @@ type User struct {
 	Email     string    `gorm:"size:255;not null;unique" json:"email" example:"john@doe.com"`
 	Password  string    `gorm:"size:100;not null;" json:"password" example:"password"`
 	Role      string    `gorm:"size:100;" json:"role" example:"admin"`
-	CreatedAt time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"created_at"`
-	UpdatedAt time.Time `gorm:json:"updated_at" example:"1"`
+	CreatedAt time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"created_at" example:"2020-09-06T15:17:17.769031568Z"`
+	UpdatedAt time.Time `json:"updated_at" example:"2020-09-06T15:17:17.769031568Z"`
 }
 
 func Hash(password string) ([]byte, error) {
